2002-06-13  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TclExecuteByteCode): fixed the previous
	patch - wouldn't compile with TCL_COMPILE_DEBUG set.

2002-06-13  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TclExecuteByteCode): consolidated the
	handling of exception returns to INST_INVOKE and INST_EVAL, as
	well as most of the code for INST_CONTINUE and INST_BREAK, in the
	new jump target "processExceptionReturn".

2002-06-13  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c (TclExecuteByteCode): consolidated variable
	handling opcodes, replaced redundant code with some 'goto'. All
	store/append/lappend opcodes on the same data type now share the
	main code; same with incr opcodes.
	* generic/tclVar.c: added the bit TCL_TRACE_READS to the possible
	flags to Tcl_SetVar2Ex - it causes read traces to be fired prior
	to setting the variable. This is used in the core for [lappend].

	***NOTE*** the usage of TCL_TRACE_READS in Tcl_(Obj)?GetVar.* is
	not documented; there, it causes the call to create the variable
	if it does not exist. The new usage in Tcl_(Obj)?SetVar.* remains
	undocumented too ...
	
2002-06-13  Vince Darley  <vincentdarley@users.sourceforge.net>

	* tests/fCmd.test:
	* tests/winFile.test:
	* tests/fileSystem.test:
	* generic/tclTest.c:
	* generic/tclCmdAH.c:
	* generic/tclIOUtil.c:
	* doc/FileSystem.3:
	* mac/tclMacFile.c:
	* unix/tclUnixFile.c:
	* win/tclWinFile.c: fixed up further so both compiles and
	actually works with VC++ 5 or 6.
	* win/tclWinInt.h: 
	* win/tclWin32Dll.c: cleaned up code and vfs tests and
	added tests for the internal changes of 2002-06-12, to see
	whether WinTcl on NTFS can coexist peacefully with links
	in the filesystem.  Added new test command 'testfilelink'
	to enable the newer code to be tested.
	* tests/fCmd.test: (made certain tests of 'testfilelink' not
	run on unix).

2002-06-12  Miguel Sofer  <msofer@users.sourceforge.net>
